[metadata]
name = jenerator
author = Aviel Yosef
author-email = Avielyo10@gmail.com
description-file = README.md
home-page = https://github.com/Avielyo10/jenerator
license = Apache License Version 2.0
classifier =
    Environment :: Console
    Intended Audience :: Jenkins Developers
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    jenerator

[entry_points]
console_scripts =
    jenerator = jenerator.cli:cli
